--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,34 @@
 	<artifactId>restAssuredFramework</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	<build>
+		<defaultGoal>test</defaultGoal>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+
+					</suiteXmlFiles>
+
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.9.0</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<name>restAssuredFramework</name>
 	<url>http://maven.apache.org</url>
